cmake_minimum_required(VERSION 2.6)
PROJECT(UDJ)
FIND_PACKAGE(Qt4 REQUIRED)

SET(UDJ_DEBUG_BUILD FALSE)

IF(CMAKE_BUILD_TYPE EQUAL "Debug")
  SET(UDJ_DEBUG_BUILD TRUE)
ENDIF(CMAKE_BUILD_TYPE EQUAL "Debug")
  

IF(UDJ_DEBUG_BUILD)
  ADD_DEFINITIONS(-DUDJ_DEBUG_BUILD)
ENDIF(UDJ_DEBUG_BUILD)
  

ADD_SUBDIRECTORY(src)
